[package]
name = "bevy_hookup_core"
version = "4.3.1"
edition = "2024"
description = "The core library of the bevy_hookup library"
readme = "../README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Schoggi0815/bevy_hookup"

[dependencies]
bevy = { version = "0.16.1" }
crossbeam = "0.8.4"
rand = "0.9.2"
serde = "1.0.219"
