[package]
name = "bevy_hookup_core"
version = "5.2.0"
edition = "2024"
description = "The core library of the bevy_hookup library"
readme = "../README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Schoggi0815/bevy_hookup"

[dependencies]
bevy = "0.18.1"
crossbeam = "0.8.4"
itertools = "0.14.0"
rand = "0.10.0"
serde = "1.0.219"
