[package]
name = "bevy_hookup_macros"
version = "1.0.0"
edition = "2024"
description = "The macro library of the bevy_hookup library"
readme = "../README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Schoggi0815/bevy_hookup"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0.106", features = ["full"] }
