[package]
name = "bevy_hookup_messenger_self"
version = "2.0.6"
edition = "2024"
description = "The self messenger of the bevy_hookup library"
readme = "./README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Schoggi0815/bevy_hookup"

[dependencies]
bevy = { version = "0.16.1" }
bevy_hookup_core = { path = "../bevy_hookup_core", version = "4.2.1"}
crossbeam = "0.8.4"
