[package]
name = "bevy_hookup_messenger_websocket"
version = "1.0.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.1" }
bevy_hookup_core = { path = "../bevy_hookup_core" }
bincode = { version = "2.0.1", features = ["serde"] }
crossbeam = "0.8.4"
futures-util = "0.3.31"
serde = "1.0.219"
tokio = { version = "1.47.1", features = ["full"]}
tokio-tungstenite = "0.27.0"
