[package]
name = "bevy_hookup_messenger_websocket"
version = "2.1.0"
edition = "2024"
description = "The websocket messenger of the bevy_hookup library"
readme = "./README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Schoggi0815/bevy_hookup"

[dependencies]
bevy = { version = "0.16.1" }
bevy_hookup_core = { path = "../bevy_hookup_core", version = "2.0.0"}
bincode = { version = "2.0.1", features = ["serde"] }
crossbeam = "0.8.4"
futures-util = "0.3.31"
serde = "1.0.219"
tokio = { version = "1.47.1", features = ["full"]}
tokio-tungstenite = "0.27.0"
