[package]
name = "bevy_hookup_example_basic"
version = "0.1.0"
edition = "2024"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.16.1" }
bevy-inspector-egui = "0.33.1"
bevy_hookup_core = { path = "../../bevy_hookup_core" }
bevy_hookup_messager_self = { path = "../../bevy_hookup_messager_self" }
